# ModelMerging

./: README.md  pyproject.toml  what.sh
modelmerge/: grader.py
modelmerge/train/: finetune.py  grpo.py  temp.ipynb
scripts/: distributed_grpo.sh  eval.sh  temp.sh  train.sh  train_test.sh  training_params.sh
src/modelmerge/: data.py  grader.py
src/modelmerge/eval/: accuracy.py  accuracy_merge.py
src/modelmerge/merge/: task_vector.py
src/modelmerge/train/: grpo.py  temp.py
src/modelmerge/vllm/: vllm_serve.py  worker_extension.py
